--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -145,3 +145,17 @@ footer {
     opacity: 0.7;
 }
 
+/* Cart Icon */
+.cart-icon {
+    font-size: 24px;
+    margin-right: 20px; /* Add space between the icon and navbar edges */
+}
+
+.cart-icon a {
+    color: white; /* Icon color */
+    text-decoration: none;
+}
+
+.cart-icon a:hover {
+    color: #f39c12; /* Hover color for the cart icon */
+}
